@@ -12,6 +12,7 @@ Implements:
 from __future__ import annotations
 
 import locale
+import re
 from collections.abc import Iterable
 from typing import TYPE_CHECKING, Any, Literal
 
@@ -103,10 +104,9 @@ class FullFormatter(BaseFormatter):
             if k in spec:
                 return v
 
-        for k, v in REGISTERED_FORMATTERS.items():
-            if k in spec:
-                orphan_fmt = REGISTERED_FORMATTERS[k]
-                break
+        clean_spec = re.sub(r"\~|\^", "", spec)
+        if clean_spec in REGISTERED_FORMATTERS:
+            orphan_fmt = REGISTERED_FORMATTERS[clean_spec]
         else:
             return self._formatters["D"]
 
@@ -174,6 +174,7 @@ class FullFormatter(BaseFormatter):
             use_plural=use_plural,
             length=babel_kwds.get("length", None),
             locale=locale,
+            as_ratio=False if "^" in spec else True,
         )
 
     def format_measurement(
